Merge latest changes from davdroid
Fix for crash on adding account

Change-Id: Ic4c63dd03a6bf2e9f7ed41f63cd0332cada275ef